--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
+    <!--Login Title-->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,6 +21,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"/>
 
+    <!--Username using hint instead of text-->
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,6 +31,7 @@
         android:layout_below="@+id/login"
         android:layout_alignParentStart="true"/>
 
+    <!--Password using hint instead of text-->
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,6 +42,7 @@
         android:layout_marginTop="20sp"
         android:layout_alignParentStart="true"/>
 
+    <!--Login Button-->
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,6 +53,7 @@
         android:layout_marginTop="20sp"
         android:layout_alignEnd="@+id/login"/>
 
+   <!--Register Button-->
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
